--- a/roles/testnode/tasks/setup-fedora.yml
+++ b/roles/testnode/tasks/setup-fedora.yml
@@ -1,10 +1,10 @@
----
-- import_tasks: imitate_ubuntu.yml
+# ---
+# - import_tasks: imitate_ubuntu.yml
 
-- name: Set grub config.
-  template:
-    src: grub
-    dest: /etc/default/grub
-    owner: root
-    group: root
-    mode: 0644
+# - name: Set grub config.
+#   template:
+#     src: grub
+#     dest: /etc/default/grub
+#     owner: root
+#     group: root
+#     mode: 0644
