--- a/roles/testnode/tasks/setup-centos.yml
+++ b/roles/testnode/tasks/setup-centos.yml
@@ -3,4 +3,4 @@
   import_tasks: cloud-init.yml
   when: ansible_distribution_major_version == "6"
 
-- import_tasks: imitate_ubuntu.yml
+# - import_tasks: imitate_ubuntu.yml
