--- a/roles/testnode/vars/ubuntu_14.yml
+++ b/roles/testnode/vars/ubuntu_14.yml
@@ -6,7 +6,7 @@ apt_repos:
 packages:
   - libboost-thread1.54.0
   - mpich
-  - qemu-system-x86
+  # - qemu-system-x86
 #  - blkin
   - lttng-tools
   ###
