--- a/roles/testnode/vars/ubuntu_16.yml
+++ b/roles/testnode/vars/ubuntu_16.yml
@@ -6,7 +6,7 @@ apt_repos:
 packages:
   - libboost-thread1.58.0
   - mpich
-  - qemu-system-x86
+  # - qemu-system-x86
   - python-virtualenv
   - python-configobj
   - python-gevent
@@ -26,11 +26,11 @@ packages:
 
 packages_to_upgrade:
   # http://tracker.ceph.com/issues/13522#note-51
-  - libgoogle-perftools4
+  # - libgoogle-perftools4
   # http://tracker.ceph.com/issues/18126#note-11
   - valgrind
 
 non_aarch64_packages:
-  - libgoogle-perftools4
+  # - libgoogle-perftools4
   - iozone3
   - libssl1.0.0
