--- a/roles/testnode/vars/zypper_systems.yml
+++ b/roles/testnode/vars/zypper_systems.yml
@@ -8,7 +8,7 @@ nagios_plugins_directory: /usr/lib64/nagios/plugins
 
 packages_to_remove:
   # multipath interferes with krbd tests
-  - multipath-tools
+  # - multipath-tools
 
 # ceph packages that we ensure do not exist
 ceph_packages_to_remove:
