Commented - name: Set the hardware clock

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -25,10 +25,10 @@
 - import_tasks: zypper_systems.yml
   when: ansible_pkg_mgr == "zypper"
 
-- name: Set the hardware clock
-  command: hwclock --systohc
-  tags:
-    - timezone
+# - name: Set the hardware clock
+#   command: hwclock --systohc
+#   tags:
+#     - timezone
 
 # configure Kerberos
 - import_tasks: kerberos.yml
