changes collected from m1306003

--- a/roles/testnode/vars/apt_systems.yml
+++ b/roles/testnode/vars/apt_systems.yml
@@ -5,7 +5,7 @@ nfs_service: nfs-kernel-server
 
 packages_to_remove:
   # multipath interferes with krbd tests
-  # - multipath-tools
+  - multipath-tools
 
 ceph_packages_to_remove:
   - ceph
@@ -21,7 +21,8 @@ ceph_packages_to_remove:
   - ceph-fs-common-dbg
   - ceph-fs-common
 
-packages: []
+packages:
+  - qemu-utils
 common_packages: []
 
 apt_repos: []
