--- a/roles/testnode/vars/ubuntu_16.yml
+++ b/roles/testnode/vars/ubuntu_16.yml
@@ -6,7 +6,8 @@ apt_repos:
 packages:
   - libboost-thread1.58.0
   - mpich
-  # - qemu-system-x86
+  - qemu-system-s390x
+  - qemu-utils
   - python-virtualenv
   - python-configobj
   - python-gevent
