--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 timezone: "Etc/UTC"
+timezone: "Europe/Berlin"
 
 # Red Hat Subscription Manager credentials
 subscription_manager_activationkey: ""
