--- a/roles/testnode/tasks/apt_systems.yml
+++ b/roles/testnode/tasks/apt_systems.yml
@@ -59,13 +59,13 @@
     group: fuse
     mode: 0644
 
-- name: Add teuthology user to groups fuse, kvm and disk.
-  user:
-    name: "{{ teuthology_user }}"
-    # group sets the primary group, while groups just adds
-    # the user to the specified group or groups.
-    groups: fuse,kvm,disk
-    append: yes
+# - name: Add teuthology user to groups fuse, kvm and disk.
+#   user:
+#     name: "{{ teuthology_user }}"
+#     # group sets the primary group, while groups just adds
+#     # the user to the specified group or groups.
+#     groups: fuse,kvm,disk
+#     append: yes
 
 - import_tasks: static_ip.yml
   when: "'vps' not in group_names"
