--- a/roles/testnode/tasks/zap_disks.yml
+++ b/roles/testnode/tasks/zap_disks.yml
@@ -42,22 +42,22 @@
       item.mount != '/srv' and
       item.mount != '/opt'
 
-## http://tracker.ceph.com/issues/20533
-## Trusty version of wipefs lacks --force option
-- name: Wipe filesystems on non-root partitions
-  shell: "wipefs --force --all /dev/{{ item }} || wipefs --all /dev/{{ item }}"
-  with_items: "{{ non_root_partitions.stdout_lines }}"
-  when: non_root_partitions|length > 0
+# ## http://tracker.ceph.com/issues/20533
+# ## Trusty version of wipefs lacks --force option
+# - name: Wipe filesystems on non-root partitions
+#   shell: "wipefs --force --all /dev/{{ item }} || wipefs --all /dev/{{ item }}"
+#   with_items: "{{ non_root_partitions.stdout_lines }}"
+#   when: non_root_partitions|length > 0
 
-## See https://github.com/ceph/ceph-ansible/issues/759#issue-153248281
-- name: Zap all non-root disks
-  shell: "sgdisk --zap-all /dev/{{ item.key }} || sgdisk --zap-all /dev/{{ item.key }}"
-  with_dict: "{{ ansible_devices }}"
-  when:
-    - item.key not in root_disk
-    - '"loop" not in item.key'
-    - '"ram" not in item.key'
-    - '"sr" not in item.key'
+# ## See https://github.com/ceph/ceph-ansible/issues/759#issue-153248281
+# - name: Zap all non-root disks
+#   shell: "sgdisk --zap-all /dev/{{ item.key }} || sgdisk --zap-all /dev/{{ item.key }}"
+#   with_dict: "{{ ansible_devices }}"
+#   when:
+#     - item.key not in root_disk
+#     - '"loop" not in item.key'
+#     - '"ram" not in item.key'
+#     - '"sr" not in item.key'
 
 ## See https://tracker.ceph.com/issues/22354 and
 ## https://github.com/ceph/ceph/pull/20400
@@ -70,22 +70,22 @@
     - '"ram" not in item.key'
     - '"sr" not in item.key'
 
-- name: Remove all LVM data
-  shell: "dmsetup remove_all --force"
-  register: removed_lvm_data
-  until: "'Unable to remove' not in removed_lvm_data.stderr"
-  retries: 5
-  delay: 1
-  ignore_errors: true
+# - name: Remove all LVM data
+#   shell: "dmsetup remove_all --force"
+#   register: removed_lvm_data
+#   until: "'Unable to remove' not in removed_lvm_data.stderr"
+#   retries: 5
+#   delay: 1
+#   ignore_errors: true
 
-## See http://tracker.ceph.com/issues/21989
-- name: Check for physical volumes
-  shell: "pvdisplay | grep 'PV Name' | awk '{ print $3 }'"
-  register: pvs_to_remove
+# ## See http://tracker.ceph.com/issues/21989
+# - name: Check for physical volumes
+#   shell: "pvdisplay | grep 'PV Name' | awk '{ print $3 }'"
+#   register: pvs_to_remove
 
-- name: Remove physical volumes
-  shell: "pvremove --force --force --yes {{ item }}"
-  with_items: "{{ pvs_to_remove.stdout_lines }}"
-  when:
-    - pvs_to_remove is defined
-    - pvs_to_remove.stdout_lines|length > 0
+# - name: Remove physical volumes
+#   shell: "pvremove --force --force --yes {{ item }}"
+#   with_items: "{{ pvs_to_remove.stdout_lines }}"
+#   when:
+#     - pvs_to_remove is defined
+#     - pvs_to_remove.stdout_lines|length > 0
