--- a/roles/testnode/vars/ubuntu_15.yml
+++ b/roles/testnode/vars/ubuntu_15.yml
@@ -6,7 +6,7 @@ packages:
 # FIXME: not available on vivid, figure out what's available and use it
 # - libboost-thread1.54.0
   - mpich
-  # - qemu-system-x86
+  - qemu-system-s390x
 # FIXME: not available on vivid, figure out what's available and use it
 #  - blkin
   - lttng-tools
