--- a/roles/testnode/vars/ubuntu_18.yml
+++ b/roles/testnode/vars/ubuntu_18.yml
@@ -1,7 +1,8 @@
 ---
 packages:
   - mpich
-  # - qemu-system-x86
+  - qemu-system-s390x
+  - qemu-utils
   - python-virtualenv
   - python-configobj
   - python-gevent
