ubuntu 22: qemu-system-s390x

--- a/roles/testnode/vars/ubuntu_22.yml
+++ b/roles/testnode/vars/ubuntu_22.yml
@@ -1,7 +1,8 @@
 ---
 packages:
   - mpich
-  - qemu-system-x86
+  - qemu-system-s390x
+  - qemu-utils
 #  - blkin
   - lttng-tools
   # for building xfstests #18067
