comment out remoto

--- a/roles/testnode/vars/apt_systems.yml
+++ b/roles/testnode/vars/apt_systems.yml
@@ -27,5 +27,5 @@ common_packages: []
 apt_repos: []
 common_apt_repos: []
 
-pip_packages_to_install:
-  - remoto>=0.0.35
+# pip_packages_to_install:
+#   - remoto>=0.0.35
