--- a/tools/prep-fog-capture.yml
+++ b/tools/prep-fog-capture.yml
@@ -142,5 +142,5 @@
     command: chronyc -a makestep
     when: '"chrony" in ntp_service'
 
-  - name: Sync the hardware clock
-    command: "hwclock --systohc"
+  # - name: Sync the hardware clock
+  #   command: "hwclock --systohc"
