--- a/roles/testnode/vars/ubuntu.yml
+++ b/roles/testnode/vars/ubuntu.yml
@@ -79,7 +79,7 @@ common_packages:
   - libgnutls30
 
 non_aarch64_common_packages:
-  - smbios-utils
+  # - smbios-utils
   - libfcgi
   - sysprof
 
