--- a/roles/testnode/vars/ubuntu.yml
+++ b/roles/testnode/vars/ubuntu.yml
@@ -87,8 +87,7 @@ packages_to_upgrade:
   - apt
   - apache2
 
-non_aarch64_packages_to_upgrade:
-  - libapache2-mod-fastcgi
+non_aarch64_packages_to_upgrade: []
 
 no_recommended_packages:
   - collectl
