clean /var/lib/ceph/

--- a/roles/testnode/tasks/main.yml
+++ b/roles/testnode/tasks/main.yml
@@ -138,6 +138,8 @@
     - /etc/systemd/system/
     - /etc/ceph
     - /var/log/
+    - /var/lib/ceph/
+    - /home/ubuntu/cephtest
   register: ceph_test_artifacts
   changed_when: ceph_test_artifacts.stdout != ""
   failed_when: ceph_test_artifacts.rc != 0 and
